_sass/main.scss
@charset "utf-8";

/*!
Theme Name: Bulbera
Theme URI: http://underscores.me/
Author: logical-luke
Author URI: http://www.logical-luke.com
Description: The lightweight theme for personal blog
Version: 1.0.0
Tested up to: 5.4
Requires PHP: 8.0
License: GNU General Public License v2 or later
License URI: LICENSE
Text Domain: bulbera
Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready

This theme, like WordPress, is licensed under the GPL.
Use it to make something cool, have fun, and share what you've learned.

Bulbera is based on Underscores https://underscores.me/, (C) 2012-2020 Automattic, Inc.
Underscores is distributed under the terms of the GNU GPL v2 or later.
*/

$family-sans-serif: "Roboto", "Arial", sans-serif;

$primary: #8BC443;
$link: #0098C0;
$grey: #A7AE9C;
$grey-darker: #43493A;
$info: #00CFFF;
$success: #009B25;
$warning: #FFCA68;
$danger: #FF5538;

@import "../node_modules/bulma/sass/utilities/initial-variables";

@import "../node_modules/bulma/bulma";

body {
  font-family: 'Roboto', sans-serif;
}

.center, .center-column, .top, .right, .bottom, .left {
  display: flex;
  justify-content: center;
  align-items: center;
}

.center-column {
  flex-direction: column;
}

.top {
  align-items: flex-start;
}

.right {
  justify-content: flex-end;
}

.bottom {
  align-items: flex-end;
}

.left {
  justify-content: flex-start;
}

.single-spaced, .single-spaced * {
  line-height: 1;
}

@media (max-width: 1023px) {
  .desktop {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .navigation {
    padding: 0.5rem 0.5rem;
  }
}

.breadcrumb a {
  white-space: break-spaces;
  word-break: break-word;
  overflow-wrap: break-word;
  overflow: hidden;
}

@media (max-width: 1023px) {
  .navigation {
    padding: 0;
  }
}

@media (min-width: 1024px) {
  .until-widescreen {
    display: none;
  }
}

.mobile-menu {
  display: none;
}

.logo {
  width: 100%;
  max-width: 256px;
}


/*!*! debug.css | MIT License | zaydek.github.com/debug.css *!*/
/**:not(path):not(g) {*/
/*    color:                    hsla(210, 100%, 100%, 0.9) !important;*/
/*    background:               hsla(210, 100%,  50%, 0.5) !important;*/
/*    outline:    solid 0.25rem hsla(210, 100%, 100%, 0.5) !important;*/

/*    box-shadow: none !important;*/
/*}*/

